@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.588 2006/02/08 19:58:44 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.589 2006/02/09 00:44:34 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
+
+  8 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIPortage.py:
+  short circuit and check vdb directly if package begins with '='
 
   8 Feb 2006; Preston Cody <codeman@gentoo.org>
   added more packages to extra_packages list in IP
